--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "start": "webpack && node ./dist/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -25,10 +25,10 @@
     "babel-preset-stage-2": "^6.24.1",
     "react-hot-loader": "^4.3.3",
     "webpack": "^4.15.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   }
